  * Fix FD_SETSIZE comparision warnings
  * Add "lua-5.1" to searched pkg-config names for lua
  * Fix unused function webdav_lockdiscovery in mod_webdav
  * cmake: Fix crypt lib check
  * cmake: Add -export-dynamic to link flags, fixes build on FreeBSD
  * Set FD_CLOEXEC for bound sockets before pipe-logger forks (fixes #2026)

- 1.4.23 - 2009-06-19
  * Added some extra warning options in cmake and fix the resulting warnings (unused/static functions)
  * New lighttpd man page (moved it to section 8) (fixes #1875)
  * Create rrd file for empty rrdfile in mod_rrdtool (#1788)
  * Fix workaround for incorrect path info/scriptname if fastcgi prefix is "/" (fixes #729)
  * Finally removed spawn-fcgi
  * Allow xattr to overwrite mime type (fixes #1929)
  * Remove link from errormsg about fastcgi apps (fixes #1942)
  * Strip trailing dot from "Host:" header
  * Remove the optional port info from SERVER_NAME (thx Mr_Bond)
  * Fix mod_proxy RoundRobin (off by one problem if only one backend is up)
  * Rename configure.in to configure.ac, with small cleanups (fixes #1932)
  * Add proper SUID bit detection (fixes #416)
  * Check for regular file in mod_cgi, so we don't try to start directories
  * Include mmap.h from chunk.h to fix some problems with #define mmap mmap64 (fixes #1923)
  * Add support for pipe logging for server.errorlog (fixes #296)
  * Add revision number to package version for svn/git checkouts
  * Use server.tag for SERVER_SOFTWARE if configured (fixes #357)
  * Fix trailing zero char in REQUEST_URI after "strip-request-uri" in mod_fastcgi
  * mod_magnet: Add env["request.remote-ip"] (fixes #1740)
  * mod_magnet: Add env["request.path-info"]
  * Change name/version separator back to "/" (affects every place where the version is printed)
  * Fix bug with FastCGI request id overflow under high load; just use always id 1 as we don't use multiplexing. (thx jgray)
  * Add some dirlisting enhancements (fixes #1458)